--- a/Thermory.Web/Views/ProductFamily/Index.cshtml
+++ b/Thermory.Web/Views/ProductFamily/Index.cshtml
@@ -3,11 +3,18 @@
 }
 @model Thermory.Web.Models.ProductFamilyIndex
 
-<ul>
+
+<ul class="nav nav-tabs" data-tabs="tabs">
     @{
-        foreach (var product in Model.RootProductFamilies)
+        foreach (var productFamily in Model.RootProductFamilies)
         {
-            <li>@product.Name</li>
+            var active = Model.ActiveProductFamily != null && productFamily.Id == Model.ActiveProductFamily.Id ? "class=active" : "";
+            <li @active><a href="/ProductFamily/Index/@productFamily.Id">@productFamily.Name</a></li>
         }
     }
 </ul>
+<div class="tab-content">
+    <div class="tab-pane active">
+        Hello World!
+    </div>
+</div>
