Organized the product data in a top down manner for easy use in views. ProductCategory => SubCategories => Types => Products.

--- a/Thermory.Web/Views/InventoryWorksheet/Index.cshtml
+++ b/Thermory.Web/Views/InventoryWorksheet/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var rootProductFamilies = Model.ProductFamilies.Where(f => f.ParentId == null).ToList();
 }
 @model Thermory.Web.Models.InventoryWorksheet
 
 
-<ul class="nav nav-tabs" data-tabs="tabs">
+@*<ul class="nav nav-tabs" data-tabs="tabs">
     @{
         foreach (var productFamily in rootProductFamilies)
         {
@@ -41,4 +40,4 @@
             </div>
         }
     }
-</div>
+</div>*@
