Changed default page to the Inventory Worksheet, removed links in layout that aren't used and replaced with a link to the Inventory Worksheet.

--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <div class="content-wrapper">
             <div class="float-left">
-                <p class="site-title">@Html.ActionLink("Thermory", "Index", "Home", null, new { @class = "logo" })</p>
+                <p class="site-title">@Html.ActionLink("Thermory", "Index", "InventoryWorksheet", null, new { @class = "logo" })</p>
             </div>
             <div class="float-right">
                 @*<section id="login">
@@ -23,9 +23,10 @@
                     </section>*@
                 <nav>
                     <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
+                        @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     </ul>
                 </nav>
             </div>
