Added sort order to product family. Worked on inventory worksheet layout.

--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -780,7 +780,7 @@ tr.englishHeading {
     font-weight: bold;
 }
 
-div.subCategoryHeading {
+div.headingWidth  {
     width: 137px;
     overflow: hidden;
     display: block;
