--- a/Thermory.Web/Views/InventoryWorksheet/_LumberFamily.cshtml
+++ b/Thermory.Web/Views/InventoryWorksheet/_LumberFamily.cshtml
@@ -1,4 +1,5 @@
-﻿@using WebGrease.Css.Extensions
+﻿@using Thermory.Business
+@using WebGrease.Css.Extensions
 @model Thermory.Domain.IProductCategory<Thermory.Domain.ILumberSubCategory>
 
 @foreach (var subCategory in Model.ProductSubCategories)
@@ -31,14 +32,18 @@
         </tr>
         @foreach (var productType in subCategory.ProductTypes)
         {
+            var totalPieces = 0;
             @Html.Raw(blankRow)
             <tr>
                 <td colspan="2" class="productType productTypeHeading"><div class="headingWidth" title="@productType.Name">@productType.Name</div></td>
                 @foreach (var length in millimeterLengths)
                 {
-                    <td class="productType subCategoryCellPadding subCategoryLength">TBD</td>
+                    var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
+                    var quantity = @productForLength == null ? 0 : productForLength.Quantity;
+                    totalPieces += quantity;
+                    <td class="productType subCategoryCellPadding subCategoryLength">@quantity</td>
                 }
-                <td rowspan="2" class="totalLinearFeet">TBD</td>
+                <td rowspan="2" class="totalLinearFeet">XYZ</td>
                 <td rowspan="2" class="totalSquareFeet">TBD</td>
             </tr>
             <tr>
@@ -53,16 +58,21 @@
                 <td colspan="2" class="productType productTypeStatistic">LF / Length</td>
                 @foreach (var length in millimeterLengths)
                 {
-                    <td class="subCategoryCellPadding subCategoryLength">TBD</td>
+                    var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
+                    var linearFeet = productForLength == null ? 0 : Math.Round(productForLength.Quantity * (productForLength.LengthInInches / 12), 0);
+                    <td class="subCategoryCellPadding subCategoryLength">@linearFeet</td>
                 }
                 <td class="totalPieceHeading">Total PCS</td>
-                <td>TBD</td>
+                <td>@totalPieces</td>
             </tr>
             <tr>
                 <td colspan="2" class="productType productTypeStatistic">SF / Length</td>
                 @foreach (var length in millimeterLengths)
                 {
-                    <td class="productType subCategoryCellPadding subCategoryLength">TBD</td>
+                    var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
+                    var linearFeet = productForLength == null ? 0 : Math.Round(productForLength.Quantity * (productForLength.LengthInInches / 12), 0);
+                    var squareFeet = productForLength == null ? 0 : Math.Round(linearFeet * LengthConverter.ConvertMillimetersToInches(subCategory.Width) / 12, 0);
+                    <td class="productType subCategoryCellPadding subCategoryLength">@squareFeet</td>
                 }
                 <td colspan="2">&nbsp;</td>
             </tr>
