--- a/Thermory.Web/Views/InventoryWorksheet/_LumberFamily.cshtml
+++ b/Thermory.Web/Views/InventoryWorksheet/_LumberFamily.cshtml
@@ -1,5 +1,4 @@
-﻿@using Thermory.Business
-@using WebGrease.Css.Extensions
+﻿@using WebGrease.Css.Extensions
 @model Thermory.Domain.IProductCategory<Thermory.Domain.ILumberSubCategory>
 
 @foreach (var subCategory in Model.ProductSubCategories)
@@ -14,7 +13,7 @@
     <table class="table table-condensed inventory">
         <tr class="metricHeading">
             <td class="subCategoryUnit">mm</td>
-            <td class="subCategoryDimensions">@subCategory.Thickness x @subCategory.Width</td>
+            <td class="subCategoryDimensions">@subCategory.ThicknessInMillimeters x @subCategory.WidthInMillimeters</td>
             @foreach (var length in millimeterLengths)
             {
                 <td class="subCategoryCellPadding subCategoryLength">@length</td>
@@ -39,18 +38,20 @@
                 @foreach (var length in millimeterLengths)
                 {
                     var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
-                    var quantity = @productForLength == null ? 0 : productForLength.Quantity;
+                    var quantity = @productForLength == null ? 0 : productForLength.Inventory.Quantity;
                     totalPieces += quantity;
                     <td class="productType subCategoryCellPadding subCategoryLength">@quantity</td>
                 }
-                <td rowspan="2" class="totalLinearFeet">XYZ</td>
-                <td rowspan="2" class="totalSquareFeet">TBD</td>
+                <td rowspan="2" class="totalLinearFeet">@productType.TotalLinearFeet</td>
+                <td rowspan="2" class="totalSquareFeet">@productType.TotalSquareFeet</td>
             </tr>
             <tr>
                 <td colspan="2" class="productType productTypeStatistic">Tally %</td>
                 @foreach (var length in millimeterLengths)
                 {
-                    <td class="productType subCategoryCellPadding subCategoryLength productTypeTally">TBD</td>
+                    var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
+                    var tally = @productForLength == null ? 0 : productForLength.Inventory.TallyPercentage;
+                    <td class="productType subCategoryCellPadding subCategoryLength productTypeTally">@tally%</td>
                 }
             </tr>
             @Html.Raw(blankRow)
@@ -59,7 +60,7 @@
                 @foreach (var length in millimeterLengths)
                 {
                     var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
-                    var linearFeet = productForLength == null ? 0 : Math.Round(productForLength.Quantity * (productForLength.LengthInInches / 12), 0);
+                    var linearFeet = productForLength == null ? 0 : productForLength.Inventory.LinearFeet;
                     <td class="subCategoryCellPadding subCategoryLength">@linearFeet</td>
                 }
                 <td class="totalPieceHeading">Total PCS</td>
@@ -70,8 +71,7 @@
                 @foreach (var length in millimeterLengths)
                 {
                     var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
-                    var linearFeet = productForLength == null ? 0 : Math.Round(productForLength.Quantity * (productForLength.LengthInInches / 12), 0);
-                    var squareFeet = productForLength == null ? 0 : Math.Round(linearFeet * LengthConverter.ConvertMillimetersToInches(subCategory.Width) / 12, 0);
+                    var squareFeet = productForLength == null ? 0 : productForLength.Inventory.SquareFeet;
                     <td class="productType subCategoryCellPadding subCategoryLength">@squareFeet</td>
                 }
                 <td colspan="2">&nbsp;</td>
