--- a/Thermory.Web/Views/InventoryAudit/_LumberAuditForm.cshtml
+++ b/Thermory.Web/Views/InventoryAudit/_LumberAuditForm.cshtml
@@ -39,7 +39,11 @@
                     var productForLength = productType.Products.SingleOrDefault(p => p.LengthInMillmeters == length);
                     var quantity = @productForLength == null ? 0 : productForLength.Inventory.Quantity;
                     var productId = @productForLength == null ? Guid.Empty : productForLength.Id;
-                    <td class="productType subCategoryCellPadding subCategoryLength"><input type="text" name="inventory@productId" id="@productId" class="form-control" maxlength="6" pattern="[0-9]*" value="@quantity" /></td>
+                    var qtyId = string.Format("qty{0}", productId);
+                    <td class="productType subCategoryCellPadding subCategoryLength">
+                        <input type="hidden" id="@qtyId" value="@quantity" />
+                        <input type="text" name="inventory@productId" id="@productId" class="form-control" maxlength="6" pattern="[0-9]*" value="@quantity" />
+                    </td>
                 }
                 <td rowspan="2" class="totalLinearFeet">@productType.TotalLinearFeet</td>
                 <td rowspan="2" class="totalSquareFeet">@productType.TotalSquareFeet</td>
