Added transactional command to ensure multi record saves don't partially save, corrupting the data.

--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 <nav>
                     <ul id="menu">
                         <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
+                        <li>@Html.ActionLink("Inventory Audit", "Index", "InventoryAudit")</li>
                     </ul>
                 </nav>
             </div>
