--- a/Thermory.Web/Views/InventoryAudit/Index.cshtml
+++ b/Thermory.Web/Views/InventoryAudit/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Thermory.Web.Models.InventoryWorksheet
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var firstCategoryId = Model.LumberProductCategories.First().Id;
+    var firstCategoryId = Model.LumberCategories.First().Id;
 }
 
 <div id="worksheetPanel">
     <ul class="nav nav-tabs" data-tabs="tabs">
         @{
-            foreach (var category in Model.LumberProductCategories)
+            foreach (var category in Model.LumberCategories)
             {
                 var active = category.Id == firstCategoryId ? "class=active" : "";
                 <li @active><a href="#@category.Id" data-toggle="tab">@category.Name</a></li>
@@ -16,7 +16,7 @@
     </ul>
     <div class="tab-content" style="height: 500px; overflow: auto;">
         @{
-            foreach (var category in Model.LumberProductCategories)
+            foreach (var category in Model.LumberCategories)
             {
                 var active = category.Id == firstCategoryId ? "active" : "";
                 <div id="@category.Id" class="tab-pane @active">
