--- a/Thermory.Web/Views/InventoryAudit/Index.cshtml
+++ b/Thermory.Web/Views/InventoryAudit/Index.cshtml
@@ -35,27 +35,30 @@
         $('#worksheetPanel').hide();
         $('#savingPanel').show();
 
-        var inventory = new Array();
+        var lumberProducts = new Array();
         $("input[name^='inventory']").each(function () {
             var id = $(this).attr('id');
             var qty = $(this).val();
             var oldQty = $('#qty' + id).val();
 
             if (oldQty != qty) {
-                inventory.push({
-                    Product: { Id: id },
+                lumberProducts.push({
+                    Id: id,
                     Quantity: qty
                 });
             }
         });
 
-        if (inventory.length == 0) {
+        if (lumberProducts.length == 0) {
             $('#worksheetPanel').show();
             $('#savingPanel').hide();
             return;
         }
+        var postData = JSON.stringify(lumberProducts);
 
-        var postData = JSON.stringify(inventory);
+        console.log(lumberProducts);
+        console.log(postData);
+
         $.ajax({
             type: 'POST',
             url: '@Url.Action("Index", "InventoryAudit")',
@@ -64,6 +67,13 @@
             data: postData,
             success: function (data, status, request) {
                 location.reload();
+            },
+            error: function (data, status, request) {
+                console.log(data);
+                console.log(status);
+                console.log(request);
+                $('#worksheetPanel').show();
+                $('#savingPanel').hide();
             }
         });
     }
