--- a/Thermory.Web/Views/InventoryAudit/Index.cshtml
+++ b/Thermory.Web/Views/InventoryAudit/Index.cshtml
@@ -30,7 +30,7 @@
             foreach (var category in Model.MiscellaneousCategories)
             {
                 <div id="@category.Id" class="tab-pane">
-                    @*@Html.Partial("_MiscSummary", category)*@
+                    @Html.Partial("_MiscellaneousAuditForm", category)
                 </div>
             }
 }
@@ -41,37 +41,48 @@
 <div id="savingPanel" style="display: none;">Saving...</div>
 
 <script type="text/javascript">
+    $(document).ready(function () {
+        $('input[name=lumberQty],[name=miscQty]').keydown(function (e) {
+            // Allow: backspace, delete, tab, escape, enter and .
+            if ($.inArray(e.keyCode, [46, 8, 9, 27, 13, 110, 190]) !== -1 ||
+                // Allow: Ctrl+A, Command+A
+                (e.keyCode == 65 && (e.ctrlKey === true || e.metaKey === true)) ||
+                // Allow: home, end, left, right, down, up
+                (e.keyCode >= 35 && e.keyCode <= 40)) {
+                // let it happen, don't do anything
+                return;
+            }
+            // Ensure that it is a number and stop the keypress
+            if ((e.shiftKey || (e.keyCode < 48 || e.keyCode > 57)) && (e.keyCode < 96 || e.keyCode > 105)) {
+                e.preventDefault();
+            }
+        });
+    });
+
     function saveInventory() {
         $('#worksheetPanel').hide();
         $('#savingPanel').show();
 
-        var lumberProducts = new Array();
-        $("input[name^='inventory']").each(function () {
-            var id = $(this).attr('id');
-            var qty = $(this).val();
-            var oldQty = $('#qty' + id).val();
+        var lumberProducts = getInventory('lumber');
+        var miscProducts = getInventory('misc');
 
-            if (oldQty != qty) {
-                lumberProducts.push({
-                    Id: id,
-                    Quantity: qty
-                });
-            }
-        });
-
-        if (lumberProducts.length == 0) {
+        if (lumberProducts.length == 0 && miscProducts == 0) {
             $('#worksheetPanel').show();
             $('#savingPanel').hide();
             return;
         }
-        var postData = JSON.stringify(lumberProducts);
 
-        console.log(lumberProducts);
+        var lumberJson = JSON.stringify(lumberProducts);
+        var miscJson = JSON.stringify(miscProducts);
+        var postData = '{"lumberProducts" : ' + lumberJson + ', "miscProducts" : ' + miscJson + '}';
+
+        console.log(lumberJson);
+        console.log(miscJson);
         console.log(postData);
 
         $.ajax({
             type: 'POST',
-            url: '@Url.Action("Index", "InventoryAudit")',
+            url: '@Url.Action("Save", "InventoryAudit")',
             contentType: 'application/json',
             dataType: 'json',
             data: postData,
@@ -86,5 +97,23 @@
                 $('#savingPanel').hide();
             }
         });
+    }
+
+    function getInventory(prefix) {
+        var products = new Array();
+        var query = 'input[name=\'' + prefix + 'Qty\']';
+        $(query).each(function () {
+            var id = $(this).attr('id');
+            var qty = $(this).val();
+            var oldQty = $('#qty' + id).val();
+
+            if (oldQty != qty) {
+                products.push({
+                    Id: id,
+                    Quantity: qty
+                });
+            }
+        });
+        return products;
     }
 </script>
