--- a/Thermory.Web/Views/InventoryAudit/Index.cshtml
+++ b/Thermory.Web/Views/InventoryAudit/Index.cshtml
@@ -35,7 +35,7 @@
             }
 }
     </div>
-    <button type="button" class="btn btn-default" onclick="saveInventory();">Save</button>
+    <button type="button" class="btn btn-warning" onclick="saveInventory();">Save</button>
 </div>
 
 <div id="savingPanel" style="display: none;">Saving...</div>
