Turned on authorization.

--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
                 <p class="site-title">@Html.ActionLink("Thermory", "Index", "InventoryWorksheet", null, new { @class = "logo" })</p>
             </div>
             <div class="float-right">
-                @*<section id="login">
+                <section id="login">
                         @Html.Partial("_LoginPartial")
-                    </section>*@
+                    </section>
                 <nav>
                     <ul id="menu">
                         <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
