--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -19,14 +19,17 @@
             </div>
             <div class="float-right">
                 <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
-                        <li>@Html.ActionLink("Inventory Audit", "Index", "InventoryAudit")</li>
-                    </ul>
-                </nav>
+                    @Html.Partial("_LoginPartial")
+                </section>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <nav>
+                        <ul id="menu">
+                            <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
+                            <li>@Html.ActionLink("Inventory Audit", "Index", "InventoryAudit")</li>
+                        </ul>
+                    </nav>
+                }
             </div>
         </div>
     </header>
