--- a/Thermory.Web/Views/Account/Login.cshtml
+++ b/Thermory.Web/Views/Account/Login.cshtml
@@ -42,8 +42,8 @@
 </section>
 
 <section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ViewBag.ReturnUrl })
+    @*<h2>Use another service to log in.</h2>
+    @Html.Action("ExternalLoginsList", new { ViewBag.ReturnUrl })*@
 </section>
 
 @section Scripts {
