--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -1,45 +1,67 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-@section featured {
+﻿@section featured {
     <section class="featured">
         <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
+            <div class="title">
+                <h1>Progress Summary</h1>
+            </div>
             <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
+                This is a summary of progress with this site. It doesn't include all the technical details that went into
+                it, but focuses more on features that can be seen in the web site itself.
             </p>
         </div>
     </section>
 }
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
+<h3>Progress Report:</h3>
+<ul>
+    <li>
+        <h5>2/20/2016</h5>
+        <ul>
+            <li>Finished adding miscellaneous items to the audit form.</li>
+            <li>Required user to login.</li>
+            <li>Added user registration page.</li>
+            <li>Added inventory audit table to record when and who makes inventory changes.</li>
+            <li>When saving the inventory audit form an inventory transaction is created.</li>
+            <li>
+                <ul>
+                    <li><em>Need to finish adding inventory detail records (each quantity that changes as part of the save).</em></li>
+                </ul>
+            </li>
+        </ul>
     </li>
-
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
+    <li>
+        <h5>2/17/2016</h5>
+        <ul>
+            <li>Added miscellaneous products to inventory worksheet.</li>
+        </ul>
     </li>
-
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
+    <li>
+        <h5>2/9/2016</h5>
+        <ul>
+            <li>Completed inventory audit save for lumber products.</li>
+        </ul>
     </li>
-</ol>
+    <li>
+        <h5>1/29/2016</h5>
+        <ul>
+            <li>Completed lumber calculations on the inventory worksheet.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>1/16/2016</h5>
+        <ul>
+            <li>Added inventory quantities to lumber products.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>1/13/2016</h5>
+        <ul>
+            <li>Completed adding lumber inventory into database.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>1/13/2016</h5>
+        <ul>
+            <li>Finished inventory worksheet layout (quantities and calculated values N/A for now).</li>
+        </ul>
+    </li>
+</ul>
