A few styling tweaks and changed the default page to the home page.

--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
     <section class="featured">
         <div class="content-wrapper">
             <div class="title">
-                <h1>Progress Summary</h1>
+                <h1>Progress Report</h1>
             </div>
             <p>
                 This is a summary of progress with this site. It doesn't include all the technical details that went into
-                it, but focuses more on features that can be seen in the web site itself.
+                it or a full worklog, but focuses more on features that can be seen in the web site itself.
             </p>
         </div>
     </section>
