--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <div class="content-wrapper">
             <div class="float-left">
-                <p class="site-title">@Html.ActionLink("Thermory", "Index", "InventoryWorksheet", null, new { @class = "logo" })</p>
+                <p class="site-title">@Html.ActionLink("Thermory", "Index", "Home", null, new { @class = "logo" })</p>
             </div>
             <div class="float-right">
                 <section id="login">
