--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -210,14 +210,14 @@ ul#menu {
 }
 
     .featured .content-wrapper {
-        background-color: #7ac0da;
-        background-image: -ms-linear-gradient(left, #7ac0da 0, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #7ac0da 0, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #7ac0da 0, #a4d4e6 100%);
-        background-image: linear-gradient(left, #7ac0da 0, #a4d4e6 100%);
+        background-color: #ff8c00;
+        background-image: -ms-linear-gradient(left, #ff8c00 0, #ffaa55 100%);
+        background-image: -o-linear-gradient(left, #ff8c00 0, #ffaa55 100%);
+        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #ff8c00), color-stop(1, #ffaa55));
+        background-image: -webkit-linear-gradient(left, #ff8c00 0, #ffaa55 100%);
+        background-image: linear-gradient(left, #ff8c00 0, #ffaa55 100%);
         color: #3e5667;
-        padding: 20px 40px 30px 40px;
+        padding: 10px 40px 10px 40px;
     }
 
     .featured hgroup.title h1, .featured hgroup.title h2 {
