Added transaction details when performing an inventory audit.

--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -16,12 +16,23 @@
     <li>
         <h5>2/20/2016</h5>
         <ul>
+            <li>
+                Finished logging transaction details.
+                <ul>
+                    <li>Logs previous and new quantity for each product quantity modified via inventory audit.</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <h5>2/20/2016</h5>
+        <ul>
             <li>Finished adding miscellaneous items to the audit form.</li>
             <li>Required user to login.</li>
             <li>Added user registration page.</li>
             <li>Added inventory audit table to record when and who makes inventory changes.</li>
-            <li>When saving the inventory audit form an inventory transaction is created.</li>
             <li>
+                When saving the inventory audit form an inventory transaction is created.
                 <ul>
                     <li><em>Need to finish adding inventory detail records (each quantity that changes as part of the save).</em></li>
                 </ul>
