Added order form and wired up create order functionality.

--- a/Thermory.Web/Views/InventoryWorksheet/Index.cshtml
+++ b/Thermory.Web/Views/InventoryWorksheet/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Thermory.Web.Models.InventoryWorksheet
+﻿@model Thermory.Web.ViewModels.InventoryViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var firstCategoryId = Model.LumberCategories.First().Id;
