--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                         <ul id="menu">
                             <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
                             <li>@Html.ActionLink("Inventory Audit", "Index", "InventoryAudit")</li>
+                            <li>@Html.ActionLink("Create Purchase Order", "CreatePurchaseOrder", "OrderForm")</li>
+                            <li>@Html.ActionLink("Create Sales Order", "CreateSalesOrder", "OrderForm")</li>
                         </ul>
                     </nav>
                 }
