--- a/Thermory.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Thermory.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", null, new { @class = "username", title = "Manage" })!
+        <a href="~/Account/Manage" class="username" title="Manager"><span class="glyphicon glyphicon-user"></span> @User.Identity.Name</a>
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
