--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
+    @Styles.Render("~/Content/w2ui-css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/w2ui")
     @RenderSection("scripts", required: false)
 </head>
 <body>
@@ -25,10 +27,10 @@
                 {
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Inventory Worksheet", "Index", "InventoryWorksheet")</li>
-                            <li>@Html.ActionLink("Inventory Audit", "Index", "InventoryAudit")</li>
-                            <li>@Html.ActionLink("Create Purchase Order", "CreatePurchaseOrder", "OrderForm")</li>
-                            <li>@Html.ActionLink("Create Sales Order", "CreateSalesOrder", "OrderForm")</li>
+                            <li>@Html.ActionLink("Inventory Worksheet", "Index", "Inventory")</li>
+                            <li>@Html.ActionLink("Inventory Audit", "Audit", "Inventory")</li>
+                            <li>@Html.ActionLink("Create Purchase Order", "CreatePurchaseOrder", "Order")</li>
+                            <li>@Html.ActionLink("Create Sales Order", "CreateSalesOrder", "Order")</li>
                         </ul>
                     </nav>
                 }
