--- a/Thermory.Web/Views/Order/Index.cshtml
+++ b/Thermory.Web/Views/Order/Index.cshtml
@@ -3,10 +3,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<nav>
+    <ul>
+        <li>@Html.ActionLink("Create Purchase Order", "CreatePurchaseOrder", "Order")</li>
+        <li>@Html.ActionLink("Create Sales Order", "CreateSalesOrder", "Order")</li>
+    </ul>
+</nav>
 <div id="orderDiv" style="height: 450px"></div>
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         $('#orderDiv').w2grid({
             name: 'orderGrid',
             url: '@Url.RouteUrl("DefaultApi", new { httproute = "", controller = "OrderGrid" })',
@@ -15,33 +21,23 @@
             limit: 500,
             msgRefresh: 'Loading',
             show: {
-                toolbar: true,
+                toolbar: false,
                 footer: false,
                 toolbarSave: false,
                 toolbarDelete: false,
-                toolbarSearch: true
+                toolbarSearch: false
             },
-            searches: [
-                @*{ field: 'ReferenceNumber', caption: '@GoCardless.PatientReference', type: 'text' },
-                { field: 'FirstName', caption: '@GoCardless.FirstName', type: 'text' },
-                { field: 'LastName', caption: '@GoCardless.LastName', type: 'text' },
-                { field: 'Email', caption: '@GoCardless.EmailAddress', type: 'text' }*@
-            ],
             columns: [
-                @*{
-                    field: 'ReferenceNumber', caption: '@GoCardless.PatientReference', size: '20%', sortable: true, resizable: true,
+                {
+                    field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, type: 'text'
                 },
                 {
-                    field: 'FirstName', caption: '@GoCardless.FirstName', size: '20%', sortable: true, resizable: true,
+                    field: 'CreatedBy', caption: 'Created By', size: '20%', sortable: true, resizable: true, type: 'text'
                 },
                 {
-                    field: 'LastName', caption: '@GoCardless.LastName', size: '20%', sortable: true, resizable: true,
-                },
-                { field: 'Email', caption: '@GoCardless.EmailAddress', size: '40%', sortable: true, resizable: true }*@
-            ],
-            @*onSelect: function(event) {
-                window.location = ('@Url.Action("Summary", "Patient")/' + event.recid);
-            }*@
+                    field: 'CreatedOn', caption: 'Created On', size: '20%', sortable: true, resizable: true, type: 'date'
+                }
+            ]
         });
     });
 </script>
