--- a/Thermory.Web/Views/Order/Index.cshtml
+++ b/Thermory.Web/Views/Order/Index.cshtml
@@ -29,14 +29,17 @@
             },
             columns: [
                 {
-                    field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, type: 'text'
+                    field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, render: 'text'
                 },
                 {
-                    field: 'CreatedBy', caption: 'Created By', size: '20%', sortable: true, resizable: true, type: 'text'
+                    field: 'CreatedOn', caption: 'Created On', size: '40%', sortable: true, resizable: true, render: 'date'
                 },
                 {
-                    field: 'CreatedOn', caption: 'Created On', size: '20%', sortable: true, resizable: true, type: 'date'
+                    field: 'CreatedBy', caption: 'Created By', size: '40%', sortable: true, resizable: true, render: 'text'
                 }
+            ],
+            sortData: [
+                { field: 'CreatedOn', direction: 'desc' }
             ]
         });
     });
