--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -14,6 +14,12 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
+        <h5>3/4/2016</h5>
+        <ul>
+            <li>Added orders page with grid listing all orders.</li>
+        </ul>
+    </li>
+    <li>
         <h5>2/29/2016</h5>
         <ul>
             <li>Added create order.</li>
